<resources>
    <string name="app_name">Story App</string>
    <string name="dashboard_story">Story App</string>
    <string name="login_description">Masukkan Akunmu Dan Unggah Story Mu</string>
    <string name="iconLogin">Hanya icon hiasan untuk login</string>
    <string name="register">Daftar</string>
    <string name="refresh">Pulihkan</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="add_story">Tambah Cerita</string>
    <string name="detail_story">Detail Cerita</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nama</string>
    <string name="have_account">Belum Punya Akun?</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="save">Simpan</string>
    <string name="created_date">Tanggal Dibuat</string>
    <string name="description">Deskripsi</string>
    <string name="label_change_language_settings">Pengaturan Ubah Bahasa</string>
    <string name="label_invalid_email">Format Email tidak valid</string>
    <string name="label_validation_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="validate_register_success">User telah dibuat!</string>
    <string name="validate_register_failed">Email sudah ada!</string>
    <string name="login_user_not_found">User tidak ditemukan!</string>
    <string name="validate_login_success">Login berhasil!</string>
    <string name="input_name">Masukan Nama</string>
    <string name="input_email">Masukan Email</string>
    <string name="input_password">Masukan Password</string>
    <string name="description_mandatory">Deskripsi harus di isi</string>
    <string name="image_mandatory">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="permission">Tidak mendapatkan izin.</string>
    <string name="choose_picture">Pilih Gambar</string>
    <string name="failed_take_picture">Gagal mengambil gambar.</string>
    <string name="failed_bring_up_camera">Gagal memunculkan kamera.</string>
    <string name="info">Informasi</string>
    <string name="title_activity_maps">Lokasi Maps</string>
    <string name="list_location">Daftar Lokasi</string>
    <string name="my_place">Tempatku</string>
    <string name="set_location">Set Lokasi</string>
    <string name="retry">Coba lagi</string>
    <string name="have_account_register">Sudah punya akun ?</string>
    <string name="about">about</string>
    <string name="MyEmail">20210810157@uniku.ac.id</string>
    <string name="Name">Alya Naomi</string>
</resources>