<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<item
    android:id="@+id/action_go_to_map"
    android:icon="@drawable/ic_map"
    android:title=""
    app:showAsAction="always"/>

<item
    android:id="@+id/more"
    android:icon="@drawable/ic_more_vert"
    android:title=""
    app:showAsAction="always">

    <menu>

        <item
            android:id="@+id/settings_language"
            android:icon="@drawable/ic_language"
            android:iconTint="@color/black"
            android:title="@string/label_change_language_settings"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_logout"
            android:icon="@drawable/ic_logout"
            android:iconTint="@color/black"
            android:title="@string/logout"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_about"
            android:icon="@drawable/ic_about"
            android:iconTint="@color/black"
            android:title="@string/about"
            app:showAsAction="never" />

    </menu>

</item>

</menu>